[gd_scene load_steps=23 format=3 uid="uid://b1u1e3vr3fbl7"]

[ext_resource type="Script" uid="uid://bn342kaif3kv" path="res://scenes/battle_unit/battle_unit.gd" id="1_uhcsa"]
[ext_resource type="Texture2D" uid="uid://cx1ivjobggp8n" path="res://assets/sprites/rogues.png" id="1_yooxk"]
[ext_resource type="Script" uid="uid://cd8mwkpsxt4o1" path="res://components/packed_sprite2d.gd" id="2_uhcsa"]
[ext_resource type="Resource" uid="uid://et153h23ioel" path="res://data/units/bjorn.tres" id="2_w8xno"]
[ext_resource type="PackedScene" uid="uid://4nt2nmu7d3e2" path="res://scenes/health_bar/health_bar.tscn" id="3_vckhc"]
[ext_resource type="PackedScene" uid="uid://cra257r8y55mf" path="res://scenes/mana_bar/mana_bar.tscn" id="4_hd3fd"]
[ext_resource type="PackedScene" uid="uid://b6mqgtef78dnj" path="res://scenes/tier_icon/tier_icon.tscn" id="5_hqm4r"]
[ext_resource type="SpriteFrames" uid="uid://diyi7e8a4bt4" path="res://assets/sprites/char_animation/samurai/samurai_animations.tres" id="5_wrbs3"]
[ext_resource type="Script" uid="uid://tt4xnja7utd6" path="res://custom_nodes/detect_range.gd" id="6_lrunx"]
[ext_resource type="Script" uid="uid://bv6h3v13je5vo" path="res://components/hurtbox.gd" id="6_wrbs3"]
[ext_resource type="Script" uid="uid://cyaskx4flreov" path="res://scenes/battle_unit/ai/unit_ai.gd" id="9_hqm4r"]
[ext_resource type="Script" uid="uid://cif0tm4gntm5n" path="res://components/flip_stprite.gd" id="11_7mjoc"]
[ext_resource type="Script" uid="uid://cnxx13mu355sa" path="res://custom_nodes/target_finder.gd" id="11_iuj73"]
[ext_resource type="Script" uid="uid://inn0alfyq3tk" path="res://components/attack.gd" id="12_3h4sn"]
[ext_resource type="Script" uid="uid://b5bomn77d152n" path="res://components/scene_spawner.gd" id="13_o5iha"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wrbs3"]
size = Vector2(36, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lrunx"]
size = Vector2(36, 36)

[sub_resource type="Animation" id="Animation_uhcsa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Skin:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Skin:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Skin:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/Skin:skew")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_yooxk"]
resource_name = "attack"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Skin:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.2617993877991494, 0.3490658503988659, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Skin:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.2, 0.8), Vector2(0.8, 1.2), Vector2(0.9, 1.1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_vckhc"]
resource_name = "cast"
length = 0.3
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Skin:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.22, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 0.7), Vector2(0.7, 1.3), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Skin:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.08, 0.22, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.9254902, 1, 0, 1), Color(0.9254902, 1, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hd3fd"]
resource_name = "move"
length = 0.55
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Skin:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45000002),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.17453292519943295, 0.0, 0.17453292519943295]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Skin:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45000002),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1, 1), Vector2(0.9, 0.9)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Skin:skew")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45000002),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.08726646259971647, 0.0, 0.08726646259971647]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hqm4r"]
_data = {
&"RESET": SubResource("Animation_uhcsa"),
&"attack": SubResource("Animation_yooxk"),
&"cast": SubResource("Animation_vckhc"),
&"move": SubResource("Animation_hd3fd")
}

[node name="BattleUnit" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_uhcsa")
stats = ExtResource("2_w8xno")

[node name="Visuals" type="Node2D" parent="."]

[node name="Skin" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_yooxk")
region_enabled = true
region_rect = Rect2(64, 32, 32, 32)
script = ExtResource("2_uhcsa")
coordinates = Vector2i(2, 1)
metadata/_custom_type_script = "uid://cd8mwkpsxt4o1"

[node name="CustomSkin" type="AnimatedSprite2D" parent="Visuals"]
visible = false
position = Vector2(0, -16)
sprite_frames = ExtResource("5_wrbs3")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wrbs3")

[node name="DetectRange" type="Area2D" parent="." node_paths=PackedStringArray("col_shape")]
script = ExtResource("6_lrunx")
col_shape = NodePath("CollisionShape2D")
base_range_size = 36.0
metadata/_custom_type_script = "uid://tt4xnja7utd6"

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRange"]
debug_color = Color(0.65447843, 0.32604685, 0.9989913, 0.41960785)

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource("6_wrbs3")
metadata/_custom_type_script = "uid://bv6h3v13je5vo"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_lrunx")
debug_color = Color(0.99215686, 0.011764706, 0, 0.41960785)

[node name="AttackAnchor" type="Node2D" parent="."]

[node name="AttackMarker" type="Marker2D" parent="AttackAnchor"]
position = Vector2(16, 0)

[node name="HealthBar" parent="." instance=ExtResource("3_vckhc")]
offset_left = -15.0
offset_top = -29.0
offset_right = 15.0
offset_bottom = -23.0

[node name="ManaBar" parent="." instance=ExtResource("4_hd3fd")]
offset_left = -15.0
offset_top = -23.0
offset_right = 15.0
offset_bottom = -19.0

[node name="TierIcon" parent="." instance=ExtResource("5_hqm4r")]
z_index = 1
offset_left = -15.0
offset_top = -22.0
offset_right = -5.0
offset_bottom = -12.0

[node name="FSMDebugLabel" type="Label" parent="."]
visible = false
offset_left = -65.0
offset_top = -48.0
offset_right = 65.0
offset_bottom = -30.0
horizontal_alignment = 1

[node name="AttackTimer" type="Timer" parent="."]
process_callback = 0

[node name="AbilitySpawner" type="Node" parent="."]
script = ExtResource("13_o5iha")
metadata/_custom_type_script = "uid://b5bomn77d152n"

[node name="FlipSprite" type="Node" parent="." node_paths=PackedStringArray("sprite", "anim_sprite")]
script = ExtResource("11_7mjoc")
sprite = NodePath("../Visuals/Skin")
anim_sprite = NodePath("../Visuals/CustomSkin")
metadata/_custom_type_script = "uid://cif0tm4gntm5n"

[node name="MeleeAttack" type="Node" parent="." node_paths=PackedStringArray("parent", "anchor", "spawn_point", "spawner")]
script = ExtResource("12_3h4sn")
parent = NodePath("..")
anchor = NodePath("../AttackAnchor")
spawn_point = NodePath("../AttackAnchor/AttackMarker")
spawner = NodePath("MeleeAttackSpawner")
metadata/_custom_type_script = "uid://inn0alfyq3tk"

[node name="MeleeAttackSpawner" type="Node" parent="MeleeAttack"]
script = ExtResource("13_o5iha")
metadata/_custom_type_script = "uid://b5bomn77d152n"

[node name="RangedAttack" type="Node" parent="." node_paths=PackedStringArray("parent", "anchor", "spawn_point", "spawner")]
script = ExtResource("12_3h4sn")
parent = NodePath("..")
anchor = NodePath("../AttackAnchor")
spawn_point = NodePath("../AttackAnchor/AttackMarker")
spawner = NodePath("ProjectileSpawner")
metadata/_custom_type_script = "uid://inn0alfyq3tk"

[node name="ProjectileSpawner" type="Node" parent="RangedAttack"]
script = ExtResource("13_o5iha")
metadata/_custom_type_script = "uid://b5bomn77d152n"

[node name="TargetFinder" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("11_iuj73")
actor = NodePath("..")
metadata/_custom_type_script = "uid://cnxx13mu355sa"

[node name="UnitAI" type="Node" parent="." node_paths=PackedStringArray("debug_label", "actor")]
script = ExtResource("9_hqm4r")
debug_label = NodePath("../FSMDebugLabel")
actor = NodePath("..")
metadata/_custom_type_script = "uid://cyaskx4flreov"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hqm4r")
}
